Source/Alternet.UI.Pal/Api/VListBox.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API VListBox* VListBox_Create_()
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<VListBox*>([&](){
    #endif
        return new VListBox();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_GetVScrollBarVisible_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetVScrollBarVisible();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetVScrollBarVisible_(VListBox* obj, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetVScrollBarVisible(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_GetHScrollBarVisible_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHScrollBarVisible();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetHScrollBarVisible_(VListBox* obj, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHScrollBarVisible(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* VListBox_GetEventDcHandle_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetEventDcHandle();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API DrawingContext* VListBox_GetEventDc_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<DrawingContext*>([&](){
    #endif
        return obj->GetEventDc();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API RectI_C VListBox_GetEventRect_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<RectI_C>([&](){
    #endif
        return obj->GetEventRect();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetEventItem_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetEventItem();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetEventHeight_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetEventHeight();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetEventHeight_(VListBox* obj, int value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetEventHeight(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_GetHasBorder_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHasBorder();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetHasBorder_(VListBox* obj, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHasBorder(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetItemsCount_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetItemsCount();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetItemsCount_(VListBox* obj, int value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetItemsCount(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API ListBoxSelectionMode VListBox_GetSelectionMode_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<ListBoxSelectionMode>([&](){
    #endif
        return obj->GetSelectionMode();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetSelectionMode_(VListBox* obj, ListBoxSelectionMode value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelectionMode(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API RectI_C VListBox_GetItemRectI_(VListBox* obj, int index)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<RectI_C>([&](){
    #endif
        return obj->GetItemRectI(index);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_ScrollRows_(VListBox* obj, int rows)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->ScrollRows(rows);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_ScrollRowPages_(VListBox* obj, int pages)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->ScrollRowPages(pages);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_RefreshRow_(VListBox* obj, int row)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->RefreshRow(row);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_RefreshRows_(VListBox* obj, int from, int to)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->RefreshRows(from, to);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetVisibleEnd_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetVisibleEnd();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetVisibleBegin_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetVisibleBegin();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetRowHeight_(VListBox* obj, int line)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetRowHeight(line);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_IsSelected_(VListBox* obj, int line)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsSelected(line);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_IsVisible_(VListBox* obj, int line)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsVisible(line);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* VListBox_CreateEx_(int64_t styles)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return VListBox::CreateEx(styles);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_ClearItems_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->ClearItems();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_ClearSelected_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->ClearSelected();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetSelected_(VListBox* obj, int index, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelected(index, value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetFirstSelected_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetFirstSelected();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetNextSelected_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetNextSelected();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetSelectedCount_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetSelectedCount();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_GetSelection_(VListBox* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetSelection();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_EnsureVisible_(VListBox* obj, int itemIndex)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->EnsureVisible(itemIndex);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int VListBox_ItemHitTest_(VListBox* obj, PointD position)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->ItemHitTest(position);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetSelection_(VListBox* obj, int selection)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelection(selection);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetSelectionBackground_(VListBox* obj, Color color)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelectionBackground(color);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_IsCurrent_(VListBox* obj, int current)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsCurrent(current);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool VListBox_DoSetCurrent_(VListBox* obj, int current)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->DoSetCurrent(current);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void VListBox_SetEventCallback_(VListBox::VListBoxEventCallbackType callback)
{
    VListBox::SetEventCallback(callback);
}